@@ -17,6 +17,8 @@
 #include <iostream>
 #include <fstream>
 
+#include <stdlib.h>
+
 using namespace std;
 
 namespace {
